# gtkmmOpenCvSample

./: .gitignore  CMakeLists.txt  README.md
src/: CvDrawer.cpp  CvDrawer.h  Window.cpp  Window.h  main.cpp
